Exercise GET is working, but CREATE is not. There is an issue with var body = req.swagger.params['body'].value; For whatever reason this is not working. It was generator by using the swagger editor, but it fails to work.
